--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -7,41 +7,26 @@
     app:cardCornerRadius="15dp"
     app:cardElevation="2dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:padding="16dp">
-
-        <!-- Delete Button - Posicionado no topo à direita -->
-        <ImageView
-            android:id="@+id/delete_button"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_cart_delete"
-            android:padding="3dp" />
 
         <ImageView
             android:id="@+id/product_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@id/delete_button"
-            android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
             android:src="@drawable/mock_remedio" />
 
         <LinearLayout
-            android:id="@+id/product_details"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/delete_button"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_toStartOf="@+id/quantity_controls"
-            android:layout_toEndOf="@id/product_image"
-            android:orientation="vertical">
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_marginStart="16dp">
 
             <TextView
                 android:id="@+id/product_name"
@@ -53,48 +38,77 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/product_price"
+                android:id="@+id/product_subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/gilroy"
-                android:text="R$0.00"
+                android:fontFamily="@font/gilroymedium"
+                android:text="30 comprimidos"
                 android:textColor="#7C7C7C"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_marginTop="2dp" />
+
+            <LinearLayout
+                android:id="@+id/quantity_controls"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="12dp"
+                android:gravity="center_vertical">
+
+                <ImageView
+                    android:id="@+id/minus_button"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:background="@drawable/bg_cart_minus"
+                    android:src="@drawable/ic_minus"
+                    android:scaleType="center"
+                    android:padding="12dp" />
+
+                <TextView
+                    android:id="@+id/quantity_text"
+                    android:layout_width="32dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:fontFamily="@font/gilroy"
+                    android:text="1"
+                    android:textColor="#181725"
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:id="@+id/plus_button"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:background="@drawable/bg_cart_plus"
+                    android:src="@drawable/ic_add_blue"
+                    android:scaleType="center"
+                    android:padding="12dp" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/quantity_controls"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/delete_button"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="end|center_vertical">
 
             <ImageView
-                android:id="@+id/minus_button"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_minus" />
+                android:id="@+id/delete_button"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_cart_delete"
+                android:layout_gravity="end"
+                android:padding="3dp" />
 
             <TextView
-                android:id="@+id/quantity_text"
+                android:id="@+id/product_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="8dp"
-                android:fontFamily="@font/gilroy"
-                android:text="1"
+                android:text="R$0.00"
                 android:textColor="#181725"
-                android:textSize="16sp" />
-
-            <ImageView
-                android:id="@+id/plus_button"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_add_blue" />
-
+                android:textSize="18sp"
+                android:fontFamily="@font/gilroysemibold"
+                android:layout_gravity="end"
+                android:layout_marginTop="32dp" />
         </LinearLayout>
-
-    </RelativeLayout>
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
