--- a/app/src/main/res/layout/fragment_profile_about.xml
+++ b/app/src/main/res/layout/fragment_profile_about.xml
@@ -23,7 +23,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="32dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/logo_small"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textTitle" />
