--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="0dp">
+        android:background="@drawable/bg_cart_plus"
+        android:padding="5dp">
 
         <ImageView
             android:id="@+id/imageProduct"
@@ -21,6 +22,7 @@
             android:layout_height="110dp"
             android:scaleType="fitCenter"
             android:layout_gravity="center_horizontal"
+            android:src="@drawable/logo_small"
             android:contentDescription="Product image" />
 
         <ImageView
@@ -31,7 +33,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:src="@drawable/ic_favorite"
-            android:contentDescription="Remover dos favoritos"
+            android:contentDescription="@string/remover_dos_favoritos"
             android:clickable="true"
             android:focusable="true"/>
 
@@ -42,6 +44,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginStart="9dp"
             android:layout_marginEnd="9dp"
+            android:text="@string/nome_do_produto"
             android:fontFamily="@font/gilroybold"
             android:textColor="#181725"
             android:textSize="12sp"
@@ -55,6 +58,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginStart="9dp"
             android:layout_marginEnd="9dp"
+            android:text="@string/descri_o_do_produto"
             android:fontFamily="@font/gilroymedium"
             android:textColor="#7C7C7C"
             android:textSize="14sp"
@@ -96,8 +100,8 @@
 
                 <ImageView
                     android:id="@+id/addButton"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="17dp"
+                    android:layout_height="17dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_add_white" />
             </FrameLayout>
