--- a/app/src/main/res/layout/activity_autenticacao.xml
+++ b/app/src/main/res/layout/activity_autenticacao.xml
@@ -22,14 +22,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="48dp"/>
+            android:layout_marginTop="10dp"/>
 
         <ImageView
             android:id="@+id/logoImage"
             android:layout_width="wrap_content"
             android:layout_height="180dp"
             android:layout_marginTop="32dp"
-            android:src="@drawable/logo"
+            android:src="@drawable/logo_small"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleText" />
