--- a/app/src/main/res/layout/activity_order_success.xml
+++ b/app/src/main/res/layout/activity_order_success.xml
@@ -1,60 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="25dp"
+    android:fillViewport="true"
     android:background="#FFFFFF">
 
-    <ImageView
-        android:layout_width="270dp"
-        android:layout_height="240dp"
-        android:layout_marginTop="158dp"
-        android:layout_marginLeft="58dp"
-        android:layout_marginRight="86dp"
-        android:layout_marginBottom="67dp"
-        android:src="@drawable/ic_order_success" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Seu pedido foi finalizado com sucesso!"
-        android:textSize="28sp"
-        android:fontFamily="@font/gilroysemibold"
-        android:textColor="#181725"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Seus items estão sendo precessados e serão enviados."
-        android:textSize="16sp"
-        android:fontFamily="@font/gilroymedium"
-        android:textColor="#7C7C7C"
-        android:textAlignment="center"/>
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <Button
-        android:id="@+id/track_order_button"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="67dp"
-        android:text="Acompanhar pedido"
-        style="@style/FilterButton"/>
-
-    <TextView
-        android:id="@+id/back_to_home_button"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Voltar para o inicio"
-        android:textSize="18sp"
-        android:fontFamily="@font/gilroy"
-        android:textColor="#181725"/>
-</LinearLayout> 
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="25dp">
+
+        <ImageView
+            android:layout_width="270dp"
+            android:layout_height="240dp"
+            android:layout_marginTop="158dp"
+            android:layout_marginLeft="58dp"
+            android:layout_marginRight="86dp"
+            android:layout_marginBottom="67dp"
+            android:src="@drawable/ic_order_success" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="Seu pedido foi finalizado com sucesso!"
+            android:textSize="28sp"
+            android:fontFamily="@font/gilroysemibold"
+            android:textColor="#181725"
+            android:textAlignment="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Seus items estão sendo precessados e serão enviados."
+            android:textSize="16sp"
+            android:fontFamily="@font/gilroymedium"
+            android:textColor="#7C7C7C"
+            android:textAlignment="center"/>
+
+        <Button
+            android:id="@+id/track_order_button"
+            android:layout_width="match_parent"
+            android:layout_height="67dp"
+            android:layout_marginTop="40dp"
+            android:text="Acompanhar pedido"
+            style="@style/FilterButton"/>
+
+        <TextView
+            android:id="@+id/back_to_home_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            android:text="Voltar para o inicio"
+            android:textSize="18sp"
+            android:fontFamily="@font/gilroy"
+            android:textColor="#181725"/>
+
+    </LinearLayout>
+</ScrollView> 
