--- a/app/src/main/res/layout/fragment_profile_addresses.xml
+++ b/app/src/main/res/layout/fragment_profile_addresses.xml
@@ -55,108 +55,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
+        android:background="#FFFFFF"
+        android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <LinearLayout
-            android:id="@+id/layoutAddAddressForm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+        <include layout="@layout/fragment_add_address_form" />
 
-            <EditText
-                android:id="@+id/editCep"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autofillHints=""
-                android:hint="@string/cep"
-                android:inputType="number"
-                android:padding="10dp" />
-
-            <EditText
-                android:id="@+id/editLogradouro"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:autofillHints=""
-                android:hint="@string/logradouro"
-                android:inputType="text"
-                android:padding="10dp" />
-
-            <EditText
-                android:id="@+id/editNumero"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:autofillHints=""
-                android:hint="@string/n_mero"
-                android:inputType="number"
-                android:padding="10dp" />
-
-            <EditText
-                android:id="@+id/editComplemento"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:autofillHints=""
-                android:hint="@string/complemento"
-                android:inputType="text"
-                android:padding="10dp" />
-
-            <EditText
-                android:id="@+id/editBairro"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:autofillHints=""
-                android:hint="@string/bairro"
-                android:inputType="text"
-                android:padding="10dp" />
-
-            <EditText
-                android:id="@+id/editCidade"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:autofillHints=""
-                android:hint="@string/cidade"
-                android:inputType="text"
-                android:padding="10dp" />
-
-            <EditText
-                android:id="@+id/editEstado"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:autofillHints=""
-                android:hint="@string/estado"
-                android:inputType="text"
-                android:padding="10dp" />
-
-            <Button
-                android:id="@+id/buttonAddAddress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:background="@drawable/button_primary_bg"
-                android:fontFamily="@font/gilroysemibold"
-                android:text="@string/adicionar_endere_o"
-                android:textSize="16sp" />
-
-            <Button
-                android:id="@+id/buttonSaveChanges"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/button_primary_bg"
-                android:fontFamily="@font/gilroysemibold"
-                android:text="@string/salvar_altera_es"
-                android:textSize="16sp"
-                android:visibility="gone"/>
-
-        </LinearLayout>
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
