--- a/app/src/main/res/layout/activity_autenticacao.xml
+++ b/app/src/main/res/layout/activity_autenticacao.xml
@@ -8,6 +8,7 @@
     android:background="@color/background_light">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/autentication"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="24dp">
